kubernetes/manifests/monitoring/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: jambonz-monitoring
spec:
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
  type: NodePort
  selector:
    app: grafana
