kubernetes/manifests/monitoring/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: jambonz-monitoring
spec:
  rules:
    - host: grafana.k8s-gcp.jambonz.org
      http:
        paths:
        - backend:
            service:
              name: grafana
              port: 
                number: 3000
          path: /
          pathType: Prefix
